# PET-4x4

./: CMakeLists.txt  accuracy_mlp.py  accuracy_xgboost.py  analyse.py  data.py  merge.py  plot.py  plot_heatmap.py  run1.mac  sim.cc  train_mlp.py  train_mlp5mm.py  train_xgboost.py  train_xgboost5mm.py  xy_lce.py  xz.py  xz_lce.py
include/: EventAction.hh  SteppingAction.hh  construction.hh  generator.hh  run.hh
src/: EventAction.cc  SteppingAction.cc  action.cc  construction.cc  generator.cc  physics.cc  run.cc
